test/corpus/very_long.txt
===
Very Long
===
Feature: Long feature file
  This is a long feature file

  Scenario: scenario 01
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 02
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 03
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 04
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 05
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 06
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 07
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 08
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 09
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 10
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 11
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 12
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 13
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 14
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 15
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 16
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 17
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 18
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 19
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 20
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 21
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 22
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 23
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 24
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 25
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 26
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 27
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 28
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 29
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 30
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 31
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 32
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 33
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 34
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 35
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 36
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 37
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 38
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 39
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 40
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 41
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 42
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 43
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 44
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 45
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 46
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 47
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 48
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 49
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 50
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 51
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 52
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 53
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 54
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 55
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 56
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 57
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 58
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 59
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 60
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 61
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 62
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 63
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 64
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 65
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 66
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 67
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 68
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 69
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 70
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 71
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 72
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 73
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 74
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 75
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 76
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

  Scenario: scenario 77
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |
